--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .container {
-    display: inline-flexbox;
+    display: flex;
     justify-content: space-between;
     border: 1px solid black;
     padding: 30px;
@@ -72,13 +72,12 @@ body {
 
 .sidebar {
     display: inline-flexbox;
-    width: 15%;
-    padding: 15px;
-    justify-content: space-between;
+    padding: 60px;
     border: 1px solid black;
     background-color: beige;
-    margin-left: 10px;
+    margin-left: 30px; 
 }
+
 
 .container3 {
     padding: 10px;
